--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* styling variables */
+:root {
+  --font-base: "DM Sans", sans-serif;
+
+  --secondary-color: #313bac;
+  --minimal-px-unit: 4px;
+
+}
